# BlockchainAVO

./: Cargo.toml  LICENSE  README.md  README_ES.md  config.toml  start-node.ps1
avo-cli/: Cargo.toml
avo-cli/src/: main.rs  security.rs
avo-node/: Cargo.toml  config.toml
avo-node/data/: genesis.json  network.json
avo-node/data/economics/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
avo-node/data/node_storage/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
avo-node/data/shard_0/: IDENTITY  LOG
avo-node/data/shard_1/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
avo-node/data/shard_2/: IDENTITY  LOG
avo-node/data/shard_3/: IDENTITY  LOG
avo-node/keys/: node_key.json
avo-node/src/: config.rs  config_backup.rs  main.rs  main_new.rs  node.rs  rpc.rs
avo-node/src/ui/: banner.rs  dashboard.rs  mod.rs  theme.rs
