[workspace]
resolver = "2"
members = [
    "avo-core",
    "avo-node",
    "avo-cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AVO Protocol Team"]
license = "MIT"
repository = "https://github.com/avo-protocol/avo"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
ed25519-dalek = "2.0"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5" 
bls12_381 = "0.8"
group = "0.13"
pairing = "0.23"
threshold_crypto = "0.4"
schnorrkel = "0.11"  # VRF for validator selection

# Networking
libp2p = { version = "0.53", features = ["gossipsub", "kad", "identify", "ping", "tcp", "dns", "noise", "yamux"] }

# HTTP and RPC
warp = "0.3"
tower-http = { version = "0.4", features = ["cors"] }
hyper = "0.14"

# Ethereum L1 Integration
ethers = { version = "2.0", features = ["ws", "rustls"] }

# WASM
wasmtime = "14.0"
wat = "1.0"

# Storage
rocksdb = "0.21"
sled = "0.34"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# Math and utilities
num-bigint = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Graph algorithms
petgraph = "0.6"
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0
