[package]
name = "avo-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AVO Protocol CLI - Complete Blockchain Interaction Tool"

[[bin]]
name = "avo"
path = "src/main.rs"

[dependencies]
avo-core = { path = "../avo-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
secp256k1 = { version = "0.29", features = ["rand-std", "recovery"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
getrandom = "0.2"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.21" }
futures = "0.3"
ethers-core = "2.0"
ed25519-dalek = { workspace = true }  # Para firmas Ed25519 en operaciones seguras
