[package]
name = "avo-node"
version = "0.1.0"
edition = "2021"
authors = ["AVO Protocol Team"]
license = "MIT"

[[bin]]
name = "avo-node"
path = "src/main.rs"

[dependencies]
avo-core = { path = "../avo-core" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
uuid = { version = "1.8", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
warp = "0.3"
tower-http = { version = "0.4", features = ["cors"] }
hyper = "0.14"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"

[features]
default = ["validator"]
validator = []
full-node = ["validator"]
